| Summary: | ASTERISK-24560: Creating a named ARI bridge twice causes a crash | ||||||
| Reporter: | Kinsey Moore (kmoore) | Labels: | |||||
| Date Opened: | 2014-11-25 14:01:34.000-0600 | Date Closed: | 2015-01-20 10:54:05.000-0600 | ||||
| Priority: | Major | Regression? | |||||
| Status: | Closed/Complete | Components: | Resources/res_ari_bridges | ||||
| Versions: | 12.7.1 13.0.1 | Frequency of Occurrence | Constant | ||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ( 0) backtrace_3787.txt | |||||
| Description: | An ARI bridge is created by POSTing to /ari/bridges/test_bridge.
The same request is made a second time. Asterisk crashes. | ||||||
| Comments: | By: Kinsey Moore (kmoore) 2014-11-25 14:01:58.915-0600 Backtrace attached. By: Ashley Sanders (asanders) 2015-01-19 10:10:35.341-0600 Testsuite Review: https://reviewboard.asterisk.org/r/4348/ Asterisk Review: https://reviewboard.asterisk.org/r/4349/ | ||||||